tabsbar: Fix alltabs-button not showing on tabs overflow
Fixes #688

--- a/theme/parts/tabsbar.css
+++ b/theme/parts/tabsbar.css
@@ -473,7 +473,7 @@ tab {
 #alltabs-button {
 	visibility: collapse;
 }
-#tabbrowser-tabs[overflow="true"] ~ #alltabs-button {
+#tabbrowser-tabs[overflow] ~ #alltabs-button {
 	visibility: visible;
 }
 
